# idealista

./: .gitignore  README.md  example.db  idealista.cabal  package.yaml  stack.yaml
app/: ApiRequest.hs  Archiver.hs  Database.hs  DatabaseBuild.hs  JsonWorker.hs  Marshalling.hs  Params.hs  PisoData.hs  PisoReport.hs  Schemas.hs
data/: PisoDataExample.txt  idealista.archive  idealista.sqlite
src/: Archiver.hs  JsonWorker.hs  Main.hs  Params.hs  PisoData.hs  PisoReport.hs
test/: Tests.hs
